# quickjs

./: .gitignore  .gitmodules  CHANGELOG.md  QUICKJS_UI_ROADMAP.md  README.md  ROADMAP.md  pubspec.yaml
.codex/: HANDOFF.md
android/: build.gradle.kts  settings.gradle.kts
assets/web/: quickjs.wasm  quickjs_bridge.mjs  quickjs_wasi.js  quickjs_web.js  quickjs_web_worker.js  version.js
docs/: class_binding_lifecycle.md  npm_bundling.md  plugin_manifest.md  plugin_usage.md  quickjs_ui_navigation.md
example/: README.md  pubspec.yaml
example/integration_test/: axios_web_integration_test.dart  plugin_integration_test.dart
example/lib/: app.dart  example_page_spec.dart  example_pages.dart  main.dart  quickjs_ui_example_pages.dart
example/linux/: CMakeLists.txt
example/npm_bundle/: package-lock.json  package.json
example/test/: axios_integration_test.dart  js_call_dart_plugin_axios_test.dart  npm_bundle_test.dart  widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: quickjs.podspec
ios/quickjs/: Package.swift
lib/: quickjs.dart  quickjs_web.dart
linux/: CMakeLists.txt  quickjs_plugin.cc  quickjs_plugin_private.h
macos/: quickjs.podspec
native/: CMakeLists.txt  quickjs_bridge.c  quickjs_bridge.h
test/: quickjs_consistency_test.dart  quickjs_fetch_mount_test.dart  quickjs_runtime_state_test.dart  quickjs_test.dart
tool/: fetch_web_assets.ps1  quickjs_ui_dev_server.dart  update_quickjs.ps1  verify.cmd  verify.ps1
windows/: CMakeLists.txt  quickjs_plugin.cpp  quickjs_plugin.h  quickjs_plugin_c_api.cpp
(+126 files in other folders)
